--- a/semester2/labo6/color_picker/styles/style.css
+++ b/semester2/labo6/color_picker/styles/style.css
@@ -34,7 +34,7 @@
 #swatchContainer {
     margin-top: 10px;
     display: grid;
-    grid-template-columns: repeat(5, 1fr);
+    grid-template-columns: repeat(10,1fr);
     gap: 10px;
 }
 
